--- a/_includes/client.html
+++ b/_includes/client.html
@@ -18,7 +18,7 @@
 			<div class='client-unit {% if forloop.first == true %} animated {% endif %}'>
 				<figure class='client-info'>
 					<div class='client-avatar'>
-						<img src='../assets/img/clients/{{ client.avatar }}'>
+						<img src='./assets/img/clients/{{ client.avatar }}'>
 					</div>
 					<figcaption>
 						<strong class='client-name'>{{ client.name }}</strong>
