--- a/assets/css/3-sections/_work.scss
+++ b/assets/css/3-sections/_work.scss
@@ -62,6 +62,10 @@
         }
         .proj-wrapper {
             margin-top: 20px;
+            
+            .spinner{
+              text-indent: -100%;   
+            }
             img {
                 margin-bottom: 20px;
                 @media (max-width: 640px) {
